fix: enhance dark mode styles for vehicle info and main layout for improved readability

--- a/Vehicle/static/css/vehicle.css
+++ b/Vehicle/static/css/vehicle.css
@@ -46,9 +46,15 @@
   .vehicle-info strong{
     color: #000000d0;
   }
+  .dark-mode .vehicle-info strong{
+    color: #000000d0;
+  }
 
   .vehicle-info a{
     color: #000000d0;
+  }
+  .dark-mode .vehicle-info a{
+    color: #ccc;
   }
 
   .toggle-container {
